--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,73 +1,88 @@
 {
-  "name": "Plex",
-  "short_name": "Plex",
-  "description": "A Social Media Platform.",
+  "name": "Social Media",
+  "short_name": "SM",
+  "description": "Una plataforma de microblogging.",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
-  "shortcuts": [
-    {
-      "name": "Home",
-      "short_name": "Home",
-      "description": "Home Page",
-      "url": "/home",
-      "icons": [{ "src": "/icons/home-icon-48x48.png", "sizes": "48x48" }]
-    },
-    {
-      "name": "Profile",
-      "short_name": "Profile",
-      "description": "Your Profile Page",
-      "url": "/profile",
-      "icons": [{ "src": "/icons/profile-icon-48x48.png", "sizes": "48x48" }]
-    },
-    {
-      "name": "Trending",
-      "short_name": "Trending",
-      "description": "Trending Page",
-      "url": "/trending",
-      "icons": [{ "src": "/icons/trending-icon-48x48.png", "sizes": "48x48" }]
-    },
-    {
-      "name": "Settings",
-      "short_name": "Settings",
-      "description": "Settings Page",
-      "url": "/settings",
-      "icons": [{ "src": "/icons/settings-icon-48x48.png", "sizes": "48x48" }]
-    }
-  ],
+  "theme_color": "#141d31",
+  "background_color": "#141d31",
   "icons": [
     {
-      "src": "icons/apple-touch-icon.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512x512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "icons/maskable_icon.png",
+      "src": "/icons/maskable_icon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     }
   ],
-  "theme_color": "#141d31",
-  "background_color": "#141d31"
+  "screenshots": [
+    {
+      "src": "/screenshots/desktop-screenshot.png",
+      "sizes": "1920x1080",
+      "type": "image/png",
+      "form_factor": "wide"
+    },
+    {
+      "src": "/screenshots/mobile-screenshot.png",
+      "sizes": "375x812",
+      "type": "image/png",
+      "form_factor": "narrow"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Home",
+      "url": "/home",
+      "icons": [
+        {
+          "src": "/icons/home-icon-96x96.png",
+          "sizes": "96x96",
+          "type": "image/png"
+        }
+      ]
+    },
+    {
+      "name": "Profile",
+      "url": "/profile",
+      "icons": [
+        {
+          "src": "/icons/profile-icon-96x96.png",
+          "sizes": "96x96",
+          "type": "image/png"
+        }
+      ]
+    },
+    {
+      "name": "Trending",
+      "url": "/trending",
+      "icons": [
+        {
+          "src": "/icons/trending-icon-96x96.png",
+          "sizes": "96x96",
+          "type": "image/png"
+        }
+      ]
+    },
+    {
+      "name": "Settings",
+      "url": "/settings",
+      "icons": [
+        {
+          "src": "/icons/settings-icon-96x96.png",
+          "sizes": "96x96",
+          "type": "image/png"
+        }
+      ]
+    }
+  ]
 }
